--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Based on Hulu Webpage Clone | HTML & CSS by Brad Traversy (2021)
+<!-- Based on Hulu Webpage Clone | HTML & CSS by Shantanu Vedante (2023)
 see: https://www.youtube.com/watch?v=9OVLaEjY-Rc -->
 
 <!DOCTYPE html>
