--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Based on Hulu Webpage Clone | HTML & CSS by Shantanu Vedante (2023)
-see: https://www.youtube.com/watch?v=9OVLaEjY-Rc -->
+see: https://www.youtube.com/ -->
 
 <!DOCTYPE html>
 <html lang="en">
